[ACTIONS] Allowed functions sem Minilibx

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,8 +23,20 @@ jobs:
     - name: Build
       run: make
 
+    # NM -u para ver allowed functions
+    - name: Run Allowed functions test
+      continue-on-error: false  # This will make the workflow fail if tests fail
+      run: |
+        ./Tests/AllowedFunctions.sh ./Cub3d
+        exit_code=$?
+        if [ $exit_code -ne 0 ]; then
+          echo "::error::Tests failed with exit code $exit_code"
+          exit $exit_code
+        fi
+
+
     # Run the tests and allow failure
-    - name: Run tests
+    - name: Run Validation Test
       continue-on-error: true  # This will make the workflow fail if tests fail
       run: |
         make test
