--- a/.github/workflows/allowedfuncs.yml
+++ b/.github/workflows/allowedfuncs.yml
@@ -1,10 +1,10 @@
-name: C Parse Tests
+name: 42 Allowed Functions Tests
 
 on:
   push:
-    branches: [ "main", "master" ]
+    branches: [ "**" ]
   pull_request:
-    branches: [ "main", "master" ]
+    branches: [ "**" ]
 
 jobs:
   build-and-test:
@@ -23,12 +23,11 @@ jobs:
     - name: Build
       run: make
 
-
-    # Run the tests and allow failure
-    - name: Run Validation Test
-      continue-on-error: true  # This will make the workflow fail if tests fail
+    # NM -u para ver allowed functions
+    - name: Run Allowed functions test
+      continue-on-error: false  # This will make the workflow fail if tests fail
       run: |
-        make test
+        ./Tests/AllowedFunctions.sh ./Cub3d
         exit_code=$?
         if [ $exit_code -ne 0 ]; then
           echo "::error::Tests failed with exit code $exit_code"
