[ACTION] Config v1 Allow_funcs

--- a/.github/workflows/allowedfuncs.yml
+++ b/.github/workflows/allowedfuncs.yml
@@ -3,11 +3,9 @@ name: 42 Allowed Functions Tests
 on:
   push:
     branches: [ "**" ]
-  pull_request:
-    branches: [ "**" ]
 
 jobs:
-  build-and-test:
+  Allowed-functions:
     runs-on: ubuntu-latest
 
     steps:
