--- a/.github/workflows/allowedfuncs.yml
+++ b/.github/workflows/allowedfuncs.yml
@@ -16,7 +16,8 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y gcc make
-        sudo apt-get install xorg openbox
+        sudo apt install libx11-dev libxext-dev
+
 
     # Build the project
     - name: Build
